--- a/code.html
+++ b/code.html
@@ -687,36 +687,36 @@
                     <div class="hf-marquee-track">
                         <div class="hf-marquee-row">
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 bg-slate-800 rounded-sm"></div> Acme Corp
+                                <div class="w-6 h-6 bg-slate-800 rounded-sm"></div> Microsoft
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 bg-blue-600 rounded-full"></div> Sphere
+                                <div class="w-6 h-6 bg-blue-600 rounded-full"></div> Google
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 border-2 border-indigo-600 rounded-sm"></div> Global
+                                <div class="w-6 h-6 border-2 border-indigo-600 rounded-sm"></div> Meta
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 bg-green-500 transform rotate-45 rounded-sm"></div> Nexus
+                                <div class="w-6 h-6 bg-green-500 transform rotate-45 rounded-sm"></div> Amazon
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 border-b-4 border-red-500"></div> Rapid
+                                <div class="w-6 h-6 border-b-4 border-red-500"></div> Netflix
                             </div>
                         </div>
                         <div class="hf-marquee-row" aria-hidden="true">
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 bg-slate-800 rounded-sm"></div> Acme Corp
+                                <div class="w-6 h-6 bg-slate-800 rounded-sm"></div> Microsoft
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 bg-blue-600 rounded-full"></div> Sphere
+                                <div class="w-6 h-6 bg-blue-600 rounded-full"></div> Google
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 border-2 border-indigo-600 rounded-sm"></div> Global
+                                <div class="w-6 h-6 border-2 border-indigo-600 rounded-sm"></div> Meta
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 bg-green-500 transform rotate-45 rounded-sm"></div> Nexus
+                                <div class="w-6 h-6 bg-green-500 transform rotate-45 rounded-sm"></div> Amazon
                             </div>
                             <div class="flex items-center gap-2 font-bold text-xl text-slate-600">
-                                <div class="w-6 h-6 border-b-4 border-red-500"></div> Rapid
+                                <div class="w-6 h-6 border-b-4 border-red-500"></div> Netflix
                             </div>
                         </div>
                     </div>
@@ -752,7 +752,7 @@
                                     <h3
                                         class="text-lg font-bold text-navy group-hover:text-primary transition-colors leading-tight">
                                         Senior Frontend Developer</h3>
-                                    <p class="text-xs text-slate-500 font-semibold mt-1">TechCorp Global</p>
+                                    <p class="text-xs text-slate-500 font-semibold mt-1">Google</p>
                                 </div>
                             </div>
                             <span
@@ -792,7 +792,7 @@
                                     <h3
                                         class="text-lg font-bold text-navy group-hover:text-primary transition-colors leading-tight">
                                         Product Strategy Lead</h3>
-                                    <p class="text-xs text-slate-500 font-semibold mt-1">SaaS Solutions</p>
+                                    <p class="text-xs text-slate-500 font-semibold mt-1">Salesforce</p>
                                 </div>
                             </div>
                             <span
@@ -834,7 +834,7 @@
                                     <h3
                                         class="text-lg font-bold text-navy group-hover:text-primary transition-colors leading-tight">
                                         Head of Talent</h3>
-                                    <p class="text-xs text-slate-500 font-semibold mt-1">Nexus Scale</p>
+                                    <p class="text-xs text-slate-500 font-semibold mt-1">Microsoft</p>
                                 </div>
                             </div>
                             <span
@@ -1676,7 +1676,7 @@
                                     Senior Product Designer</h1>
                                 <div class="flex flex-wrap items-center gap-x-5 gap-y-2 text-sm text-slate-600">
                                     <span class="font-bold text-slate-900 flex items-center gap-1"><span
-                                            id="hf-job-company">Acme Corp</span> <span
+                                            id="hf-job-company">Apple</span> <span
                                             class="material-symbols-outlined text-[16px] text-blue-500">verified</span></span>
                                     <span class="flex items-center gap-1.5"><span
                                             class="material-symbols-outlined text-[18px] text-slate-400">location_on</span>
@@ -1737,7 +1737,7 @@
                             <h2 class="text-lg font-bold text-slate-900 mb-6 flex items-center gap-2"><span
                                     class="w-1 h-6 bg-primary rounded-full"></span> Job Description</h2>
                             <div class="description-content text-slate-600 text-[16px] leading-relaxed">
-                                <p>At Acme Corp, we believe that design is not just about making things look good—it's
+                                <p>At Apple, we believe that design is not just about making things look good—it's
                                     about solving complex problems for real people. As a Senior Product Designer, you
                                     will be a key player in shaping the future of our flagship SaaS platform.</p>
                                 <h3>Key Responsibilities</h3>
@@ -1833,7 +1833,7 @@
                                 onclick="openJob('techflow-staff-designer')">
                                 <p class="text-sm font-bold text-slate-900 group-hover:text-primary">Staff Product
                                     Designer</p>
-                                <p class="text-xs text-slate-500 mb-2">TechFlow • Remote</p><span
+                                <p class="text-xs text-slate-500 mb-2">Google • Remote</p><span
                                     class="text-xs font-medium text-slate-700 bg-slate-100 px-2 py-0.5 rounded">$160k -
                                     $210k</span>
                             </a>
@@ -1842,7 +1842,7 @@
                                 onclick="openJob('cloudscales-uiux')">
                                 <p class="text-sm font-bold text-slate-900 group-hover:text-primary">Senior UI/UX
                                     Engineer</p>
-                                <p class="text-xs text-slate-500 mb-2">CloudScales • New York</p><span
+                                <p class="text-xs text-slate-500 mb-2">Airbnb • New York</p><span
                                     class="text-xs font-medium text-slate-700 bg-slate-100 px-2 py-0.5 rounded">$130k -
                                     $170k</span>
                             </a>
@@ -1977,10 +1977,10 @@
                             <div class="flex items-center gap-3 flex-1 min-w-0">
                                 <div
                                     class="w-10 h-10 rounded-xl bg-indigo-100 flex items-center justify-center text-indigo-700 font-black text-xs shrink-0 shadow-sm">
-                                    TF</div>
+                                    GO</div>
                                 <div class="min-w-0">
                                     <p class="text-sm font-bold text-slate-900 truncate">Senior Product Designer</p>
-                                    <p class="text-xs text-slate-400">TechFlow Inc. · Applied Dec 8</p>
+                                    <p class="text-xs text-slate-400">Google · Applied Dec 8</p>
                                 </div>
                             </div>
                             <div class="flex-1 sm:max-w-[220px]">
@@ -2012,10 +2012,10 @@
                             <div class="flex items-center gap-3 flex-1 min-w-0">
                                 <div
                                     class="w-10 h-10 rounded-xl bg-emerald-100 flex items-center justify-center text-emerald-700 font-black text-xs shrink-0 shadow-sm">
-                                    NX</div>
+                                    AM</div>
                                 <div class="min-w-0">
                                     <p class="text-sm font-bold text-slate-900 truncate">UX Researcher</p>
-                                    <p class="text-xs text-slate-400">Nexus Solutions · Applied Nov 22</p>
+                                    <p class="text-xs text-slate-400">Amazon · Applied Nov 22</p>
                                 </div>
                             </div>
                             <div class="flex-1 sm:max-w-[220px]">
@@ -2045,10 +2045,10 @@
                             <div class="flex items-center gap-3 flex-1 min-w-0">
                                 <div
                                     class="w-10 h-10 rounded-xl bg-slate-100 flex items-center justify-center text-slate-500 font-black text-xs shrink-0 shadow-sm">
-                                    AC</div>
+                                    AP</div>
                                 <div class="min-w-0">
                                     <p class="text-sm font-bold text-slate-900 truncate">Frontend Developer</p>
-                                    <p class="text-xs text-slate-400">Acme Corp · Applied Dec 1</p>
+                                    <p class="text-xs text-slate-400">Apple · Applied Dec 1</p>
                                 </div>
                             </div>
                             <div class="flex-1 sm:max-w-[220px]">
@@ -2132,7 +2132,7 @@
                             </div>
                             <div class="flex-1 min-w-0">
                                 <p class="text-sm font-bold text-slate-900">Final Presentation Round</p>
-                                <p class="text-xs text-slate-500">TechFlow Inc. · 2:00 PM EST · 60 min</p>
+                                <p class="text-xs text-slate-500">Google · 2:00 PM EST · 60 min</p>
                             </div>
                             <div class="flex gap-2">
                                 <a href="#"
@@ -2270,7 +2270,7 @@
                                 <span class="material-symbols-outlined text-emerald-600 text-[14px]">task_alt</span>
                             </div>
                             <div>
-                                <p class="text-xs font-semibold text-slate-800">Offer received from Nexus Solutions</p>
+                                <p class="text-xs font-semibold text-slate-800">Offer received from Amazon</p>
                                 <p class="text-[10px] text-slate-400 mt-0.5">Today · 9:14 AM</p>
                             </div>
                         </div>
@@ -2280,7 +2280,7 @@
                                 <span class="material-symbols-outlined text-primary text-[14px]">visibility</span>
                             </div>
                             <div>
-                                <p class="text-xs font-semibold text-slate-800">TechFlow viewed your profile</p>
+                                <p class="text-xs font-semibold text-slate-800">Google viewed your profile</p>
                                 <p class="text-[10px] text-slate-400 mt-0.5">Yesterday · 3:40 PM</p>
                             </div>
                         </div>
@@ -2291,7 +2291,7 @@
                                     class="material-symbols-outlined text-violet-600 text-[14px]">event_available</span>
                             </div>
                             <div>
-                                <p class="text-xs font-semibold text-slate-800">Interview scheduled with TechFlow</p>
+                                <p class="text-xs font-semibold text-slate-800">Interview scheduled with Google</p>
                                 <p class="text-[10px] text-slate-400 mt-0.5">Feb 14 · 11:00 AM</p>
                             </div>
                         </div>
@@ -2319,7 +2319,7 @@
                 <div
                     class="h-8 w-8 bg-primary rounded-lg flex items-center justify-center text-white font-bold text-lg">
                     A</div>
-                <span class="font-semibold text-lg tracking-tight">Acme Corp</span>
+                <span class="font-semibold text-lg tracking-tight">Apple</span>
             </div>
             <div class="flex items-center gap-4">
                 <div class="text-sm text-slate-500 hidden sm:block">Step 2 of 3</div>
@@ -2332,7 +2332,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-12 gap-8 items-start">
                 <div class="lg:col-span-8 space-y-8">
                     <div class="bg-white rounded-xl shadow-sm border border-slate-100 p-8">
-                        <h1 class="text-3xl font-bold text-slate-900 mb-2">Schedule your interview with Acme Corp</h1>
+                        <h1 class="text-3xl font-bold text-slate-900 mb-2">Schedule your interview with Apple</h1>
                         <p class="text-lg text-slate-500 font-light">Pick a time that works for you. We're looking
                             forward to meeting.</p>
                     </div>
